Badges now use i18n depending on user's language preference

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -242,7 +242,37 @@
     "earned": "Badge Earned!",
     "earnedPlural": "Badges Earned!",
     "viewAll": "View All Badges",
-    "awesome": "Awesome!"
+    "awesome": "Awesome!",
+    "items": {
+      "first_find": { "name": "First Find", "description": "Visit your first vending machine" },
+      "explorer_5": { "name": "Explorer", "description": "Visit 5 different machines" },
+      "adventurer_25": { "name": "Adventurer", "description": "Visit 25 different machines" },
+      "urban_forager": { "name": "Urban Forager", "description": "The streets are your supermarket" },
+      "master_100": { "name": "Vending Master", "description": "Visit 100 different machines" },
+      "vending_sensei": { "name": "Vending Sensei", "description": "You have mastered the art of the machine" },
+      "legend": { "name": "Legend of Jidouhanbaiki", "description": "Your name echoes through vending history" },
+      "first_contribution": { "name": "Contributor", "description": "Add your first machine to the map" },
+      "spotter": { "name": "Spotter", "description": "Your eyes are trained" },
+      "cartographer_10": { "name": "Cartographer", "description": "Add 10 machines to the map" },
+      "pathfinder": { "name": "Pathfinder", "description": "Building the map, one pin at a time" },
+      "archaeologist": { "name": "Vending Archaeologist", "description": "Unearthing hidden treasures" },
+      "legendary_mapper": { "name": "Legendary Mapper", "description": "The community owes you a Pocari Sweat" },
+      "weird_hunter": { "name": "Weird Hunter", "description": "Visit 5 machines tagged as Weird" },
+      "oddity_collector": { "name": "Oddity Collector", "description": "Seeker of the strange" },
+      "gachapon_addict": { "name": "Gachapon Addict", "description": "Visit 10 gachapon machines" },
+      "capsule_commander": { "name": "Capsule Commander", "description": "The gacha gods smile upon you" },
+      "retro_lover": { "name": "Retro Lover", "description": "Visit 5 retro machines" },
+      "time_traveler": { "name": "Time Traveler", "description": "Living in the Showa era" },
+      "caffeine_addict": { "name": "Caffeine Addict", "description": "Running on liquid courage" },
+      "thirst_quencher": { "name": "Thirst Quencher", "description": "Hydration is your mission" },
+      "frozen_explorer": { "name": "Frozen Explorer", "description": "Brain freeze champion" },
+      "liquid_courage": { "name": "Liquid Courage", "description": "Found the good stuff" },
+      "snack_attack": { "name": "Snack Attack", "description": "Fueled by vending cuisine" },
+      "verifier": { "name": "Verifier", "description": "Verify 10 machines still exist" },
+      "truth_seeker": { "name": "Truth Seeker", "description": "Keeping the map honest" },
+      "fact_checker": { "name": "Fact Checker", "description": "Guardian of accuracy" },
+      "data_integrity": { "name": "Data Integrity Officer", "description": "The database thanks you" }
+    }
   },
   "modal": {
     "error": "Error",
