--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -242,7 +242,37 @@
     "earned": "¡Insignia Ganada!",
     "earnedPlural": "¡Insignias Ganadas!",
     "viewAll": "Ver Todas las Insignias",
-    "awesome": "¡Genial!"
+    "awesome": "¡Genial!",
+    "items": {
+      "first_find": { "name": "Primer Hallazgo", "description": "Visita tu primera máquina expendedora" },
+      "explorer_5": { "name": "Explorador", "description": "Visita 5 máquinas diferentes" },
+      "adventurer_25": { "name": "Aventurero", "description": "Visita 25 máquinas diferentes" },
+      "urban_forager": { "name": "Recolector Urbano", "description": "Las calles son tu supermercado" },
+      "master_100": { "name": "Maestro Expendedor", "description": "Visita 100 máquinas diferentes" },
+      "vending_sensei": { "name": "Sensei Expendedor", "description": "Has dominado el arte de la máquina" },
+      "legend": { "name": "Leyenda de Jidouhanbaiki", "description": "Tu nombre resuena en la historia expendedora" },
+      "first_contribution": { "name": "Contribuidor", "description": "Añade tu primera máquina al mapa" },
+      "spotter": { "name": "Avistador", "description": "Tus ojos están entrenados" },
+      "cartographer_10": { "name": "Cartógrafo", "description": "Añade 10 máquinas al mapa" },
+      "pathfinder": { "name": "Pionero", "description": "Construyendo el mapa, pin a pin" },
+      "archaeologist": { "name": "Arqueólogo Expendedor", "description": "Desenterrando tesoros ocultos" },
+      "legendary_mapper": { "name": "Mapeador Legendario", "description": "La comunidad te debe un Pocari Sweat" },
+      "weird_hunter": { "name": "Cazador de Rarezas", "description": "Visita 5 máquinas etiquetadas como Raras" },
+      "oddity_collector": { "name": "Coleccionista de Curiosidades", "description": "Buscador de lo extraño" },
+      "gachapon_addict": { "name": "Adicto al Gachapon", "description": "Visita 10 máquinas gachapon" },
+      "capsule_commander": { "name": "Comandante de Cápsulas", "description": "Los dioses del gacha te sonríen" },
+      "retro_lover": { "name": "Amante de lo Retro", "description": "Visita 5 máquinas retro" },
+      "time_traveler": { "name": "Viajero del Tiempo", "description": "Viviendo en la era Showa" },
+      "caffeine_addict": { "name": "Adicto a la Cafeína", "description": "Funcionando con coraje líquido" },
+      "thirst_quencher": { "name": "Apaga Sed", "description": "La hidratación es tu misión" },
+      "frozen_explorer": { "name": "Explorador Helado", "description": "Campeón del cerebro congelado" },
+      "liquid_courage": { "name": "Coraje Líquido", "description": "Encontraste lo bueno" },
+      "snack_attack": { "name": "Ataque de Snacks", "description": "Impulsado por cocina expendedora" },
+      "verifier": { "name": "Verificador", "description": "Verifica que 10 máquinas aún existen" },
+      "truth_seeker": { "name": "Buscador de la Verdad", "description": "Manteniendo el mapa honesto" },
+      "fact_checker": { "name": "Verificador de Hechos", "description": "Guardián de la precisión" },
+      "data_integrity": { "name": "Oficial de Integridad", "description": "La base de datos te lo agradece" }
+    }
   },
   "modal": {
     "error": "Error",
