Fix: Address PR review comments (location permissions, unmount safety, NaN handling)
Improved robustness of distance calculation in machine detail view. Added localization for 'Calculating...' state.

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -144,7 +144,8 @@
     "active": "Activa",
     "unverified": "Sin verificar",
     "away": "a {{distance}}",
-    "tapForDetails": "Toca para más detalles",
+    "calculating": "Calculando...",
+    "tapForDetails": "Toque para ver detalles",
     "getDirections": "Obtener Direcciones",
     "iVisited": "Visité",
     "visited": "Visitada",
