--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -144,6 +144,7 @@
     "active": "Active",
     "unverified": "Unverified",
     "away": "{{distance}} away",
+    "calculating": "Calculating...",
     "tapForDetails": "Tap for details",
     "getDirections": "Get Directions",
     "iVisited": "I Visited",
