--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -109,7 +109,11 @@
     "supportUs": "Apóyanos",
     "supportDescription": "JidouNavi fue creado por dos desarrolladores apasionados que recorrieron y fotografiaron personalmente muchas de estas máquinas. Tu apoyo nos ayuda a mantener la app activa y a seguir creando nuevas funciones para la comunidad.",
     "supportButton": "Invítanos un Café",
-    "supportLinkError": "No se pudo abrir el enlace. Por favor intenta más tarde."
+    "supportLinkError": "No se pudo abrir el enlace. Por favor intenta más tarde.",
+    "mySubmissions": "Mis Envíos",
+    "pendingReview": "Pendiente",
+    "rejected": "No Aprobado",
+    "pendingHint": "En revisión por nuestro equipo"
   },
   "map": {
     "searchPlaceholder": "Buscar máquinas...",
@@ -145,7 +149,8 @@
     "unverified": "Sin verificar",
     "away": "a {{distance}}",
     "calculating": "Calculando...",
-    "tapForDetails": "Toque para ver detalles",
+    "verifiedAgo": "Verificado {{time}}",
+    "tapForDetails": "Toca para más detalles",
     "getDirections": "Obtener Direcciones",
     "iVisited": "Visité",
     "visited": "Visitada",
@@ -240,7 +245,8 @@
     "permissionNeeded": "Por favor concede acceso a la cámara/galería.",
     "imageError": "Error al procesar la imagen. Por favor intenta de nuevo.",
     "submitError": "Error al añadir la máquina. Por favor intenta de nuevo.",
-    "success": "¡Máquina añadida!"
+    "success": "¡Máquina añadida!",
+    "successPending": "¡Máquina enviada! Será revisada por nuestro equipo antes de aparecer en el mapa."
   },
   "badges": {
     "earned": "¡Insignia Ganada!",
@@ -377,5 +383,44 @@
       "section12Title": "12. Contacto",
       "section12Text": "Para preguntas sobre estos términos, contáctanos en: jidou.navi@gmail.com"
     }
+  },
+  "admin": {
+    "dashboard": "Panel de Admin",
+    "reviewSubmissions": "Revisar envíos pendientes",
+    "accessDenied": "Acceso denegado. Se requieren privilegios de administrador.",
+    "pendingReview": "Revisión Pendiente",
+    "review": "Revisar Máquina",
+    "queueEmpty": "¡Todo al día!",
+    "queueEmptySubtext": "No hay máquinas pendientes de revisión",
+    "submittedBy": "Enviado Por",
+    "location": "Ubicación",
+    "nearbyCheck": "Verificación de Duplicados",
+    "noDuplicates": "No se encontraron duplicados cercanos",
+    "potentialDuplicates": "{{count}} posible(s) duplicado(s) cercano(s)",
+    "nearbyMachines": "{{count}} máquina(s) cercana(s)",
+    "away": "de distancia",
+    "noDescription": "Sin descripción",
+    "approve": "Aprobar",
+    "reject": "Rechazar",
+    "confirmApprove": "¿Aprobar Máquina?",
+    "confirmApproveMessage": "Esto hará que la máquina sea visible en el mapa para todos los usuarios.",
+    "approveSuccess": "¡Máquina aprobada y visible en el mapa!",
+    "approveError": "Error al aprobar la máquina. Por favor intenta de nuevo.",
+    "rejectSuccess": "Máquina rechazada. El contribuidor ha sido notificado.",
+    "rejectError": "Error al rechazar la máquina. Por favor intenta de nuevo.",
+    "rejectReason": "Motivo del Rechazo",
+    "selectRejectReason": "Por favor selecciona un motivo para rechazar este envío:",
+    "customReasonPlaceholder": "Ingresa un motivo personalizado...",
+    "rejectReasons": {
+      "duplicate": "Ya existe una máquina duplicada",
+      "inappropriate": "Contenido inapropiado u ofensivo",
+      "lowQuality": "Foto o descripción de baja calidad",
+      "wrongLocation": "Ubicación o coordenadas incorrectas",
+      "notVendingMachine": "No es una máquina expendedora",
+      "other": "Otro motivo"
+    },
+    "daysAgo": "hace {{count}} día(s)",
+    "hoursAgo": "hace {{count}} hora(s)",
+    "justNow": "Ahora mismo"
   }
 }
