feat: add country selection to signup form
- Add country field after username in signup form
- Require country selection before account creation
- Include country in signup metadata for profile creation
- Add translations for country field in English and Spanish

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -30,6 +30,8 @@
     "confirmPasswordPlaceholder": "Re-enter password",
     "username": "Username",
     "usernamePlaceholder": "Choose a username",
+    "country": "Country",
+    "selectCountry": "Select Country",
     "createAccount": "Create Account",
     "dontHaveAccount": "Don't have an account?",
     "alreadyHaveAccount": "Already have an account?",
@@ -48,7 +50,8 @@
       "enterUsername": "Please enter a username",
       "usernameMinLength": "Username must be at least 3 characters",
       "passwordMinLength": "Password must be at least 6 characters",
-      "passwordsNoMatch": "Passwords do not match"
+      "passwordsNoMatch": "Passwords do not match",
+      "selectCountry": "Please select your country"
     },
     "errors": {
       "loginFailed": "Login failed",
