Implement XP and Leveling System (#91)
- Added 'xp' and 'level' columns to profiles table.
- Created 'increment_xp' database function with quadratic leveling formula.
- Implemented 'src/lib/xp.ts' for client-side XP logic and progress calculation.
- Integrated XP rewards for check-ins, photo uploads, and adding new machines.
- Updated Profile UI with level badge and animated XP progress bar.
- Added localized strings for XP system in English and Spanish.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -62,6 +62,7 @@
   "profile": {
     "title": "Profile",
     "accountSettings": "Account Settings",
+    "level": "LVL",
     "machinesAdded": "Machines Added",
     "machinesVisited": "Machines Visited",
     "nextMilestone": "Next",
