improved ui writing for login, signup, index pages. fixed some margin issues

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -35,7 +35,8 @@
     "createAccount": "Create Account",
     "dontHaveAccount": "Don't have an account?",
     "alreadyHaveAccount": "Already have an account?",
-    "subtitle": "Discover Japan's vending machines",
+    "subtitle": "Discover Japan, one vending machine at a time.",
+    "welcomeMessage": "Welcome — let’s discover Japan’s most unique vending machines.",
     "createYourAccount": "Create your account",
     "sendResetLink": "Send Reset Link",
     "forgotPasswordTitle": "Forgot Password?",
