--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -35,7 +35,8 @@
     "createAccount": "Crear Cuenta",
     "dontHaveAccount": "¿No tienes una cuenta?",
     "alreadyHaveAccount": "¿Ya tienes una cuenta?",
-    "subtitle": "Descubre las máquinas expendedoras de Japón",
+    "subtitle": "Descubre Japón, una maquina expendedora a la vez.",
+    "welcomeMessage": "“Bienvenido — vamos a explorar las máquinas expendedoras más únicas de Japón.",
     "createYourAccount": "Crea tu cuenta",
     "sendResetLink": "Enviar enlace",
     "forgotPasswordTitle": "¿Olvidaste tu contraseña?",
