added auth helper for country and username fields

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -30,8 +30,10 @@
     "confirmPasswordPlaceholder": "Re-enter password",
     "username": "Username",
     "usernamePlaceholder": "Choose a username",
+    "usernameHelper": "This is how other explorers will see you.",
     "country": "Country",
     "selectCountry": "Select Country",
+    "countryHelper": "Represent your country on the global leaderboard!",
     "createAccount": "Create Account",
     "dontHaveAccount": "Don't have an account?",
     "alreadyHaveAccount": "Already have an account?",
