--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -30,8 +30,10 @@
     "confirmPasswordPlaceholder": "Vuelve a ingresar la contraseña",
     "username": "Nombre de usuario",
     "usernamePlaceholder": "Elige un nombre de usuario",
+    "usernameHelper": "Así te verán otros exploradores.",
     "country": "País",
     "selectCountry": "Seleccionar País",
+    "countryHelper": "Representa a tu país en el ranking global!",
     "createAccount": "Crear Cuenta",
     "dontHaveAccount": "¿No tienes una cuenta?",
     "alreadyHaveAccount": "¿Ya tienes una cuenta?",
