--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -323,7 +323,21 @@
     "recentlyAdded": "Recientes",
     "visits": "visitas",
     "noPopular": "Aún no hay máquinas populares",
-    "noRecent": "Aún no hay máquinas recientes"
+    "noRecent": "Aún no hay máquinas recientes",
+    "topNearby": "Top Máquinas Cercanas",
+    "popularThisWeek": "Popular Esta Semana",
+    "noNearbyMachines": "No hay máquinas cercanas",
+    "enableLocation": "Habilita ubicación para ver máquinas cercanas",
+    "noPopularThisWeek": "Aún no hay máquinas populares esta semana",
+    "recentVisitors": "Visitantes recientes",
+    "showOnMap": "Ver en Mapa",
+    "votesRemaining": "{{count}} votos esta semana",
+    "votesRemaining_one": "{{count}} voto esta semana",
+    "noVotesLeft": "Sin votos esta semana",
+    "upvoteSuccess": "¡Votado! +{{xp}} XP",
+    "upvoteRemoved": "Voto removido",
+    "weeklyLimitReached": "Has usado los 3 votos semanales",
+    "loginToUpvote": "Inicia sesión para votar"
   },
   "legal": {
     "back": "← Volver",
@@ -405,16 +419,22 @@
     "searchPlaceholder": "Buscar usuarios...",
     "pendingRequests": "Solicitudes Pendientes",
     "yourFriends": "Tus Amigos",
-    "noFriends": "Aun no tienes amigos. Busca usuarios para agregar!",
+    "noFriends": "Aún no tienes amigos",
+    "noFriendsHint": "¡Busca amigos para agregar!",
     "noRequests": "Sin solicitudes pendientes",
-    "addFriend": "Agregar",
+    "addFriend": "Agregar Amigo",
     "friend": "Amigo",
     "requestSent": "Pendiente",
     "requestReceived": "Pendiente",
     "accept": "Aceptar",
     "decline": "Rechazar",
     "remove": "Eliminar",
-    "removeFriendConfirm": "Eliminar a {{name}} de amigos?"
+    "removeFriendConfirm": "¿Eliminar a {{name}} de amigos?",
+    "andMore": "Y {{count}} más...",
+    "searchToAdd": "Busca usuarios para agregar como amigos",
+    "searchResults": "Resultados de Búsqueda",
+    "searching": "Buscando...",
+    "noUsersFound": "No se encontraron usuarios para \"{{query}}\""
   },
   "leaderboard": {
     "title": "Clasificacion",
