fix(legal): update privacy policy and terms with new data collection points (#150)

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -354,27 +354,29 @@
       "section1Text": "Bienvenido a JidouNavi. Respetamos tu privacidad y estamos comprometidos a proteger tus datos personales. Esta política de privacidad explica cómo recopilamos, usamos y protegemos tu información cuando usas nuestra aplicación.",
       "section2Title": "2. Información que Recopilamos",
       "section2Intro": "Recopilamos los siguientes tipos de información:",
-      "section2Bullet1": "Información de cuenta (correo electrónico, nombre de usuario)",
-      "section2Bullet2": "Datos de ubicación (cuando agregas o visitas máquinas expendedoras)",
+      "section2Bullet1": "Información de cuenta (correo electrónico, nombre de usuario, avatar)",
+      "section2Bullet2": "Datos de ubicación (cuando agregas, visitas o verificas máquinas expendedoras)",
       "section2Bullet3": "Fotos que subes de máquinas expendedoras",
-      "section2Bullet4": "Datos de uso (visitas, contribuciones, insignias ganadas)",
+      "section2Bullet4": "Datos de uso (visitas, contribuciones, insignias, votos positivos y verificaciones de máquinas)",
+      "section2Bullet5": "Datos analíticos (interacciones con la aplicación, patrones de uso de funciones) para mejorar la experiencia del usuario",
       "section3Title": "3. Cómo Usamos tu Información",
       "section3Intro": "Usamos tu información para:",
       "section3Bullet1": "Proporcionar y mejorar nuestros servicios",
       "section3Bullet2": "Mostrar máquinas expendedoras cercanas en el mapa",
-      "section3Bullet3": "Rastrear tus contribuciones y otorgar insignias",
+      "section3Bullet3": "Rastrear tus contribuciones, otorgar insignias y gestionar clasificaciones",
       "section3Bullet4": "Comunicarnos contigo sobre tu cuenta",
+      "section3Bullet5": "Analizar tendencias de uso de la aplicación para mejorar el rendimiento y las funciones",
       "section4Title": "4. Datos de Ubicación",
-      "section4Text": "Recopilamos datos de ubicación solo cuando usas explícitamente funciones basadas en ubicación (encontrar máquinas cercanas, agregar una nueva máquina o registrar visita). Puedes controlar los permisos de ubicación a través de la configuración de tu dispositivo.",
+      "section4Text": "Recopilamos datos de ubicación solo cuando usas explícitamente funciones basadas en ubicación (encontrar máquinas cercanas, agregar una nueva máquina, registrar visita o verificar la existencia de una máquina). Puedes controlar los permisos de ubicación a través de la configuración de tu dispositivo.",
       "section5Title": "5. Compartir Datos",
-      "section5Text": "No vendemos tus datos personales. Tus contribuciones (ubicaciones de máquinas, fotos) se comparten públicamente para ayudar a otros usuarios a descubrir máquinas expendedoras. Tu correo electrónico y detalles de cuenta permanecen privados.",
+      "section5Text": "No vendemos tus datos personales. Tus contribuciones públicas (ubicaciones de máquinas, fotos, verificaciones) se comparten con la comunidad para ayudar a otros usuarios a descubrir máquinas expendedoras. Tu correo electrónico permanece privado.",
       "section6Title": "6. Seguridad de Datos",
       "section6Text": "Usamos medidas de seguridad estándar de la industria para proteger tus datos, incluyendo encriptación en tránsito y en reposo. Tus datos se almacenan de forma segura usando la infraestructura de Supabase.",
       "section7Title": "7. Tus Derechos",
       "section7Intro": "Tienes derecho a:",
       "section7Bullet1": "Acceder a tus datos personales",
       "section7Bullet2": "Solicitar corrección de tus datos",
-      "section7Bullet3": "Solicitar eliminación de tu cuenta",
+      "section7Bullet3": "Solicitar eliminación de tu cuenta y datos asociados",
       "section7Bullet4": "Retirar el consentimiento para el seguimiento de ubicación",
       "section8Title": "8. Contáctanos",
       "section8Text": "Si tienes preguntas sobre esta política de privacidad o tus datos, contáctanos en: jidou.navi@gmail.com"
@@ -384,14 +386,14 @@
       "section1Title": "1. Aceptación de Términos",
       "section1Text": "Al usar JidouNavi, aceptas estos Términos de Servicio. Si no estás de acuerdo con estos términos, por favor no uses la aplicación.",
       "section2Title": "2. Descripción del Servicio",
-      "section2Text": "JidouNavi es una plataforma colaborativa para descubrir y compartir ubicaciones de máquinas expendedoras. Los usuarios pueden agregar nuevas máquinas, registrar visitas, ganar insignias y explorar máquinas cercanas.",
+      "section2Text": "JidouNavi es una plataforma colaborativa para descubrir y compartir ubicaciones de máquinas expendedoras. Los usuarios pueden agregar nuevas máquinas, registrar visitas, verificar ubicaciones, ganar insignias, votar máquinas y explorar hallazgos cercanos.",
       "section3Title": "3. Cuentas de Usuario",
       "section3Intro": "Debes crear una cuenta para usar la mayoría de las funciones. Eres responsable de:",
       "section3Bullet1": "Mantener la seguridad de tu cuenta",
       "section3Bullet2": "Todas las actividades que ocurran bajo tu cuenta",
       "section3Bullet3": "Proporcionar información precisa",
       "section4Title": "4. Contenido del Usuario",
-      "section4Intro": "Cuando envías contenido (fotos, ubicaciones, descripciones):",
+      "section4Intro": "Cuando envías contenido (fotos, ubicaciones, descripciones, verificaciones):",
       "section4Bullet1": "Nos otorgas una licencia para usar y mostrar este contenido",
       "section4Bullet2": "Confirmas que tienes derecho a compartir este contenido",
       "section4Bullet3": "Aceptas no enviar contenido inapropiado o ilegal",
@@ -399,7 +401,7 @@
       "section5Intro": "Aceptas no:",
       "section5Bullet1": "Enviar información falsa o engañosa",
       "section5Bullet2": "Acosar a otros usuarios o participar en comportamientos dañinos",
-      "section5Bullet3": "Intentar manipular el sistema de insignias o clasificación",
+      "section5Bullet3": "Intentar manipular el sistema de insignias, clasificaciones o votos",
       "section5Bullet4": "Usar la aplicación para cualquier propósito ilegal",
       "section5Bullet5": "Interferir con el funcionamiento adecuado de la aplicación",
       "section6Title": "6. Precisión de Ubicación",
