--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -354,27 +354,29 @@
       "section1Text": "Welcome to JidouNavi. We respect your privacy and are committed to protecting your personal data. This privacy policy explains how we collect, use, and safeguard your information when you use our app.",
       "section2Title": "2. Information We Collect",
       "section2Intro": "We collect the following types of information:",
-      "section2Bullet1": "Account information (email, username)",
-      "section2Bullet2": "Location data (when you add or visit vending machines)",
+      "section2Bullet1": "Account information (email, username, avatar)",
+      "section2Bullet2": "Location data (when you add, visit, or verify vending machines)",
       "section2Bullet3": "Photos you upload of vending machines",
-      "section2Bullet4": "Usage data (visits, contributions, badges earned)",
+      "section2Bullet4": "Usage data (visits, contributions, badges, upvotes, and machine verifications)",
+      "section2Bullet5": "Analytics data (app interactions, feature usage patterns) to improve user experience",
       "section3Title": "3. How We Use Your Information",
       "section3Intro": "We use your information to:",
       "section3Bullet1": "Provide and improve our services",
       "section3Bullet2": "Show nearby vending machines on the map",
-      "section3Bullet3": "Track your contributions and award badges",
+      "section3Bullet3": "Track your contributions, award badges, and manage leaderboards",
       "section3Bullet4": "Communicate with you about your account",
+      "section3Bullet5": "Analyze app usage trends to enhance performance and features",
       "section4Title": "4. Location Data",
-      "section4Text": "We collect location data only when you explicitly use location-based features (finding nearby machines, adding a new machine, or checking in). You can control location permissions through your device settings.",
+      "section4Text": "We collect location data only when you explicitly use location-based features (finding nearby machines, adding a new machine, checking in, or verifying machine existence). You can control location permissions through your device settings.",
       "section5Title": "5. Data Sharing",
-      "section5Text": "We do not sell your personal data. Your contributions (machine locations, photos) are shared publicly to help other users discover vending machines. Your email and account details remain private.",
+      "section5Text": "We do not sell your personal data. Your public contributions (machine locations, photos, verifications) are shared with the community to help users discover vending machines. Your email remains private.",
       "section6Title": "6. Data Security",
       "section6Text": "We use industry-standard security measures to protect your data, including encryption in transit and at rest. Your data is stored securely using Supabase infrastructure.",
       "section7Title": "7. Your Rights",
       "section7Intro": "You have the right to:",
       "section7Bullet1": "Access your personal data",
       "section7Bullet2": "Request correction of your data",
-      "section7Bullet3": "Request deletion of your account",
+      "section7Bullet3": "Request deletion of your account and associated data",
       "section7Bullet4": "Withdraw consent for location tracking",
       "section8Title": "8. Contact Us",
       "section8Text": "If you have questions about this privacy policy or your data, please contact us at: jidou.navi@gmail.com"
@@ -384,14 +386,14 @@
       "section1Title": "1. Acceptance of Terms",
       "section1Text": "By using JidouNavi, you agree to these Terms of Service. If you do not agree to these terms, please do not use the app.",
       "section2Title": "2. Description of Service",
-      "section2Text": "JidouNavi is a crowdsourced platform for discovering and sharing vending machine locations. Users can add new machines, check in at locations, earn badges, and explore nearby machines.",
+      "section2Text": "JidouNavi is a crowdsourced platform for discovering and sharing vending machine locations. Users can add new machines, check in, verify locations, earn badges, upvote machines, and explore nearby finds.",
       "section3Title": "3. User Accounts",
       "section3Intro": "You must create an account to use most features. You are responsible for:",
       "section3Bullet1": "Maintaining the security of your account",
       "section3Bullet2": "All activities that occur under your account",
       "section3Bullet3": "Providing accurate information",
       "section4Title": "4. User Content",
-      "section4Intro": "When you submit content (photos, locations, descriptions), you:",
+      "section4Intro": "When you submit content (photos, locations, descriptions, verifications):",
       "section4Bullet1": "Grant us a license to use and display this content",
       "section4Bullet2": "Confirm you have the right to share this content",
       "section4Bullet3": "Agree not to submit inappropriate or illegal content",
@@ -399,7 +401,7 @@
       "section5Intro": "You agree not to:",
       "section5Bullet1": "Submit false or misleading information",
       "section5Bullet2": "Harass other users or engage in harmful behavior",
-      "section5Bullet3": "Attempt to manipulate the badge or leaderboard system",
+      "section5Bullet3": "Attempt to manipulate the badge, leaderboard, or upvote systems",
       "section5Bullet4": "Use the app for any illegal purpose",
       "section5Bullet5": "Interfere with the proper functioning of the app",
       "section6Title": "6. Location Accuracy",
