Clicking on leaderboard user icons take you to their profile. Clicking on machine recent visitors icons take you to their profile as well

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -454,6 +454,11 @@
     "weeklyChampion2": "2nd Place",
     "weeklyChampion3": "3rd Place"
   },
+  "userProfile": {
+    "title": "Profile",
+    "notFound": "User not found",
+    "moreBadges": "more badges"
+  },
   "admin": {
     "dashboard": "Admin Dashboard",
     "reviewSubmissions": "Review pending submissions",
