fix(add-machine): improve EXIF error UX and messaging (review feedback)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -264,7 +264,8 @@
     },
     "permissionNeeded": "Please grant camera/gallery access.",
     "imageError": "Failed to process image. Please try again.",
-    "noExifData": "No location data found in this photo. Using your current location instead.",
+    "noExifDataFallback": "No location data found in this photo. Using your current location instead.",
+    "noExifDataNoLocation": "No location data found in this photo. Please ensure you are at the location.",
     "submitError": "Failed to add machine. Please try again.",
     "success": "Machine added!",
     "successPending": "Machine submitted! It will be reviewed by our team before appearing on the map."
