refactor(machine): apply copilot suggestions for verification logic and theme constants

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -153,6 +153,7 @@
     "lastVerified": "Verificada {{date}}",
     "neverVerified": "Aún no verificada",
     "active": "Activa",
+    "verified": "Verificada",
     "unverified": "Sin verificar",
     "away": "a {{distance}}",
     "calculating": "Calculando...",
