--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -153,6 +153,7 @@
     "lastVerified": "Last verified {{date}}",
     "neverVerified": "Not yet verified",
     "active": "Active",
+    "verified": "Verified",
     "unverified": "Unverified",
     "away": "{{distance}} away",
     "calculating": "Calculating...",
